                - the value given in the creation form is used if the source organisation is not managed by Creme (because it is generated if the source is managed).
                - the help text in the creation form indicates this behaviour.
        * Emails :
            - These fields of 'EmailTemplate' cannot be inner-edited anymore: 'body', 'body_html'.


== Version 2.1.8 ==

  User side :
  -----------
    # A crash with filters containing a relationship-condition referencing an entity has been fixed.
    # Apps:
        * Projects :
            - The field 'Project.effective_end_date' cannot be inner-edited anymore (use the button 'Close the project').
            - In the forms for 'AbstractProject', the fields "start_date" & "end_date" are not required any more.
            - The button "Back to the project" has been fixed.
            - The display of the hourly cost in the Resources' brick has been fixed.
        * Creme_config :
            - Some icons have ben fixed.
        * SMS:
            - The field "description" was missing in the form for messaging list.
            - The field 'MessagingList.contacts' cannot be inner-edited anymore.


== Version 2.1.7 ==

  UPGRADE NOTE :
    - You should upgrade the minor version of Django 2.2 (2.2.16 or more)

  User side :
  -----------
    # Apps:
        * Billing :
            - When a billing document is created/edited, & the source has exactly one PaymentInformation, this one is automatically linked to the document.
            - When a PaymentInformation is created from a billing document, it is automatically linked to the document.
            - The LateX templates have been fixed :
                - the settlement terms is now used correctly.
                - the currency is now used.
            - In the block "Payments information", the button to select an account is always displayed when no account is selected.
        * SMS :
            - Many fixes & improvements have been done.

